@startuml

class main

class Option{
loginMenu()
gameMenu()

}


class SQLIO{
makeUserSQL(String name, String Email, String password)

login()

getCards()


}
class User{
-String name
-String email
-String password
-double saldo
+getName()
+setName()
}
abstract class Game{
#gameTitle
+Game(String gameTitle)
+getGameTitle()

+ abstract Result play(double betAmount);

}

class BlackJack extends Game{
-List<Card> cards


}
class Roulette extends Game


main ..> Option
Option ..> SQLIO

Option ..> Game
SQLIO --> User











@enduml